Controller kısmı bitti

--- a/MyAspNetCoreApp.Web/Views/OrnekConroller/Index.cshtml
+++ b/MyAspNetCoreApp.Web/Views/OrnekConroller/Index.cshtml
@@ -2,6 +2,12 @@
 @{
     ViewData["Title"] = "Index";
 }
+@model List<MyAspNetCoreApp.Web.Controllers.Product>;
+@foreach (var item in Model)
+{
+    <p>@item.Id-@item.Name</p>
+}
+<h1>Ornek Controller Index Sayfası</h1>
 
-<h1>Örnek Conroller İndex Sayfası</h1>
-
+@*<p>@ViewBag.name</p>*@
+    
