View Kısmı Tamamlandı

--- a/MyAspNetCoreApp.Web/Views/Home/Index.cshtml
+++ b/MyAspNetCoreApp.Web/Views/Home/Index.cshtml
@@ -1,8 +1,68 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    var alert = "Bu uyarı kodu";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+<partial name="Menu_PartialView"/>
+
+@section Scripts
+{
+    <script type="text/javascript">
+    //alert(" Sayfamıza Hoşgeldin")
+        $(document.ready)(function){
+            console.log("Sayfamıza Hoşgeldin")
+            }
+
+    </script>
+
+}
+@section Css
+{
+    <style>
+        h2 
+        {
+            color: aqua;
+            background-color: blue;
+
+        }
+
+    </style>
+    <link rel="stylesheet" href="~/css/Examplecss.css" asp-append-version="true" />
+}
+
+<h2>Merhaba Dünya</h2>
+<h3>Merhaba Adem</h3>
+
+
+
+<div>Günün Tatrihi: @DateTime.Now.ToLongDateString()</div>
+
+@{
+    var dateTime = DateTime.Now.ToLongDateString();
+
+    var mesage = "Merhaba";
+
+    @:Bu Günün Tarihi=@dateTime
+    <div> Mesaj:@mesage</div>
+    <text>Bu Günün Tarihi: @dateTime</text>
+}
+@if (1 == 1)
+{
+    <p>Doğru</p>
+}
+else
+{
+    <p>Yanlış</p>
+}
+@for (int i = 0; i < 10; i++)
+{
+    <p>@alert</p>
+}
+@foreach (var item in Enumerable.Range(1, 10).ToList())
+{
+    <p>@item</p>
+}
