--- a/MyAspNetCoreApp.Web/Views/Products/Add.cshtml
+++ b/MyAspNetCoreApp.Web/Views/Products/Add.cshtml
@@ -4,4 +4,18 @@
 }
 
 <h1>Ürün Ekleme</h1>
-
+<form asp-controller="Products" asp-action="AddProdut" method="post">
+    <label>Ürün Adı</label>
+    <input type="text"  name="Name"/>
+    <br/>
+    <label>Ürün Fiyatı</label>
+    <input type="text"  name="Price"/>
+    <br/>
+    <label>Ürün Stoku</label>
+    <input type="text" name="Stock"/>
+    <br/>
+    <label>Ürün Rengi</label>
+    <input type="text" name="Color"/>
+    <br/>
+    <button type="submit">Ürün Ekle</button>
+</form>
