--- a/MyAspNetCoreApp.Web/Views/Products/Index.cshtml
+++ b/MyAspNetCoreApp.Web/Views/Products/Index.cshtml
@@ -27,6 +27,7 @@
             <td>@item.Name</td>
             <td>@item.Price</td>
             <td>@item.Stock</td>
+            <td>@item.Color</td>
            
             <td><a asp-controller="Products" asp-action="Remove" asp-route-id="@item.Id">Sil</a></td>
             <td><a asp-controller="Products" asp-action="Update" asp-route-id="@item.Id">Güncelle</a></td>
