Mvc201 bölümü tamamlandı

--- a/MyAspNetCoreApp.Web/Views/Products/Add.cshtml
+++ b/MyAspNetCoreApp.Web/Views/Products/Add.cshtml
@@ -2,20 +2,21 @@
 @{
     ViewData["Title"] = "Add";
 }
+@model Product
 
 <h1>Ürün Ekleme</h1>
 <form asp-controller="Products" asp-action="AddProdut" method="post">
     <label>Ürün Adı</label>
-    <input type="text"  name="Name"/>
+    <input type="text"  asp-for="Name"/>
     <br/>
     <label>Ürün Fiyatı</label>
-    <input type="text"  name="Price"/>
+    <input type="text"  asp-for="Price"/>
     <br/>
     <label>Ürün Stoku</label>
-    <input type="text" name="Stock"/>
+    <input type="text" asp-for="Stock"/>
     <br/>
     <label>Ürün Rengi</label>
-    <input type="text" name="Color"/>
+    <input type="text" asp-for="Color"/>
     <br/>
     <button type="submit">Ürün Ekle</button>
 </form>
